--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -9,80 +9,12 @@
 
 <div class="columns-2 h-screen m-1">
   <div class="h-full">
-    <h1 class="text-lg font-bold">Lists</h1>
-    <ul class="divide-y">
-      <% @lists.each do |list| %>
-        <li>
-          <%= '[x]' if list.id == @list&.id %>
-          <%= link_to list.name, lists_path(list_id: list.id) %>
-          <%= link_to 'Delete',
-              list_path(id: list.id),
-              data: { 'turbo-method': :delete, 'turbo-confirm': 'Are you sure?' },
-              class: 'rounded-full
-                      border-2
-                      border-red-500
-                      px-1' if list.id == @list&.id %>
-        </li>
-      <% end %>
-    </ul>
-
-    <h1 class="mt-3 text-lg font-bold">New List</h1>
-    <%= form_with model: @new_list do |form| %>
-      <div>
-        <%= form.label :name %>
-        <%= form.text_field :name, class: 'shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline' %>
-      </div>
-      <%= form.button 'Submit', class: 'rounded-full
-                                        border-2
-                                        border-sky-600
-                                        px-1
-                                        mt-1' %>
-    <% end %>
+    <%= render 'lists' %>
+    <%= render 'list_form' %>
   </div>
 
   <div class="h-full">
-    <h1 class="text-lg font-bold">Todos</h1>
-    <ul class="divide-y mt-3 mb-3">
-      <% @todos.each do |todo| %>
-        <li>
-          <%= form_with model: todo, method: :patch do |form| %>
-            <%= form.hidden_field :done, value: !todo.done %>
-            <%= form.button "#{'[x]' if todo.done} #{todo.description}" %>
-          <% end %>
-        </li>
-      <% end %>
-    </ul>
-
-    <% if @list.present? %>
-      <h1 class="text-lg font-bold">Add Todo</h1>
-      <%= render 'layouts/flash' %>
-      <%= form_with model: @new_todo do |form| %>
-        <div class="mt-1 mb-1">
-          <%= form.label :description %>
-          <%= form.text_field :description, class: 'shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline' %>
-        </div>
-        <div class="mt-1 mb-1">
-          <%= form.label :due %>
-          <%= form.datetime_local_field :due, class: 'shadow appearance-none border rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline' %>
-        </div>
-        <%= form.hidden_field :list_id, value: @list.id %>
-        <%= form.button 'Add To Do',
-                        class: 'rounded-full
-                                border-2
-                                border-sky-600
-                                px-1
-                                mt-1
-                                mb-4' %>
-      <% end %>
-
-      <%= link_to 'Purge Done Todos',
-          todo_path(id: @list.id),
-          data: { 'turbo-method': :delete, 'turbo-confirm': 'Are you sure?' },
-          class: 'rounded-full
-                  border-2
-                  border-red-500
-                  px-1
-                  mt-1' %>
-    <% end %>
+    <%= render 'todos' %>
+    <%= render 'todo_form' %>
   </div>
 </div>
