--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -22,7 +22,7 @@
       <%= render 'list_form' %>
     </div>
 
-  <div class="md:h-full">
+  <div class="md:h-full break-inside-avoid-column">
     <%= render 'todos' %>
     <%= render 'todo_form' %>
   </div>
