--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -10,6 +10,7 @@
                                        py-2
                                        px-3
                                        leading-tight
+                                       bg-inherit
                                        focus:outline-none
                                        focus:shadow-outline' %>
   </div>
