--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -2,7 +2,7 @@
 <ul class="divide-y">
   <% @lists.each do |list| %>
     <li>
-      <%= '[x]' if list.id == @list&.id %>
+      <%= '❎' if list.id == @list&.id %>
       <%= link_to list.name, lists_path(list_id: list.id) %>
       <%= link_to 'Delete',
           list_path(id: list.id),
