--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -12,6 +12,7 @@
                                                 py-2
                                                 px-3
                                                 leading-tight
+                                                bg-inherit
                                                 focus:outline-none
                                                 focus:shadow-outline' %>
     </div>
@@ -25,6 +26,7 @@
                                                   py-2
                                                   px-3
                                                   leading-tight
+                                                  bg-inherit
                                                   focus:outline-none
                                                   focus:shadow-outline' %>
     </div>
