--- a/app/views/lists/_todos.html.erb
+++ b/app/views/lists/_todos.html.erb
@@ -1,14 +1,12 @@
 <% if @list.present? %>
   <h1 class="text-lg font-bold"><%= @list.name %> Todos</h1>
-<% else %>
-  <h1 class="text-lg font-bold">Todos</h1>
 <% end %>
 <ul class="divide-y mt-3 mb-3">
   <% @todos.each do |todo| %>
     <li>
       <%= form_with model: todo, method: :patch do |form| %>
         <%= form.hidden_field :done, value: !todo.done %>
-        <%= form.button "#{'[x]' if todo.done} #{todo.description}", class: 'text-left' %>
+        <%= form.button "#{'✅' if todo.done} #{todo.description}", class: 'text-left' %>
       <% end %>
     </li>
   <% end %>
