--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <main class="font-mono bg-gradient-to-b from-zinc-50 to-zinc-200">
+    <main class="font-mono bg-gradient-to-b from-zinc-200">
       <div class="container">
         <%= yield %>
       </div>
