--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,12 +3,12 @@
        class="columns-2
               box-border
               border-2 
-              border-sky-500
+              border-sky-600
               rounded-md
               m-1
               p-1">
-    <h1>Home Todos</h1>
-    <h1 class="text-right">Lists</h1>
+    <h1><%= t :home_todos %></h1>
+    <h1 class="text-right"><%= t :lists %></h1>
   </div>
 </div>
 
