--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -1,9 +1,9 @@
 <% if @list.present? %>
-  <h1 class="text-lg font-bold">Add Todo</h1>
+  <h1 class="text-lg font-bold"><%= t :add_todo %></h1>
   <%= render 'layouts/flash' %>
   <%= form_with model: @new_todo do |form| %>
     <div class="mt-1 mb-1">
-      <%= form.label :description %>
+      <%= form.label :description, t(:description) %>
       <%= form.text_field :description, class: 'shadow
                                                 appearance-none
                                                 border
@@ -17,7 +17,7 @@
                                                 focus:shadow-outline' %>
     </div>
     <div class="mt-1 mb-1">
-      <%= form.label :due %>
+      <%= form.label :due, t(:due) %>
       <%= form.datetime_local_field :due, class: 'shadow
                                                   appearance-none
                                                   border
@@ -31,7 +31,7 @@
                                                   focus:shadow-outline' %>
     </div>
     <%= form.hidden_field :list_id, value: @list.id %>
-    <%= form.button 'Add To Do',
+    <%= form.button t(:add_todo),
                     class: 'rounded-full
                             border-2
                             border-sky-600
@@ -40,9 +40,9 @@
                             mb-4' %>
   <% end %>
 
-  <%= link_to 'Purge Done Todos',
+  <%= link_to t(:purge_done_todos),
       todo_path(id: @list.id),
-      data: { 'turbo-method': :delete, 'turbo-confirm': 'Are you sure?' },
+      data: { 'turbo-method': :delete, 'turbo-confirm':  t(:are_you_sure) },
       class: 'rounded-full
               border-2
               border-red-500
