--- a/app/views/lists/_todos.html.erb
+++ b/app/views/lists/_todos.html.erb
@@ -1,7 +1,10 @@
 <% if @list.present? %>
   <h1 class="text-lg font-bold"><%= @list.name %> <%= t :todos %></h1>
 <% end %>
-<ul class="divide-y mt-3 mb-3">
+<ul class="divide-y
+           divide-zinc-400
+           mt-3
+           mb-3">
   <% @todos.each do |todo| %>
     <li class="pt-1 pb-1">
       <%= form_with model: todo, method: :patch do |form| %>
