Update input border color on focus

--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -12,7 +12,7 @@
                                        leading-tight
                                        bg-inherit
                                        focus:outline-none
-                                       focus:shadow-outline' %>
+                                       focus:border-sky-500' %>
   </div>
   <%= form.button t(:submit), class: 'rounded-full
                                       border-2
