--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
+@layer base {
+  .bg-green-950 {
+    background-color: #052e16;
+  }
 
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  .bg-green-900 {
+    background-color: #14532d;
+  }
+
+  .bg-green-800 {
+    background-color: #166534;
+  }
+
+  .bg-green-50 {
+    background-color: #f0fdf4;
+  }
+
+  .bg-green-100 {
+    background-color: #dcfce7;
+  }
+
+  .bg-green-200 {
+    background-color: #bbf7d0;
+  }
+
+  .bg-red-950 {
+    background-color: #450a0a;
+  }
+
+  .bg-red-900 {
+    background-color: #7f1d1d;
+  }
+
+  .bg-red-800 {
+    background-color: #991b1b;
+  }
+
+  .bg-red-50 {
+    background-color: #fef2f2;
+  }
+
+  .bg-red-100 {
+    background-color: #fee2e2;
+  }
+
+  .bg-red-200 {
+    background-color: #fecaca;
   }
 }
-
-*/
