Add initial modal

--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -55,3 +55,13 @@
               px-1
               mt-1' %>
 <% end %>
+
+<div data-controller="dialog">
+  <dialog data-dialog-target="dialog">
+    <p>The modal's content here</p>
+
+    <button type="button" data-action="dialog#close" autofocus>Cancel</button>
+  </dialog>
+
+  <button type="button" data-action="dialog#open">Open modal</button>
+</div>
