Add styling to modal

--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -47,8 +47,18 @@
   <% end %>
 
   <div data-controller="dialog">
-    <dialog data-dialog-target="dialog">
+    <dialog
+      data-dialog-target="dialog"
+      class="p-4
+             dark:bg-zinc-950
+             dark:text-zinc-50
+             rounded
+             shadow-xl"
+    >
+      
       <h2>Are you sure?</h2>
+
+      <hr class="mb-4">
 
       <%= link_to t(:purge),
           todo_path(id: @list.id),
@@ -57,7 +67,8 @@
                   border-2
                   border-red-500
                   px-1
-                  mt-1' %>
+                  mt-1
+                  mr-8' %>
 
       <button type="button" data-action="dialog#close" autofocus>Cancel</button>
     </dialog>
