--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -53,10 +53,9 @@
              dark:bg-zinc-950
              dark:text-zinc-50
              rounded
-             shadow-xl"
-    >
-      
-      <h2>Are you sure?</h2>
+             shadow-xl">
+
+      <h2><%= t(:are_you_sure) %></h2>
 
       <hr class="mb-4">
 
