--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -1,22 +1,60 @@
-<h1 class="mt-3 text-lg font-bold"><%= t :new_list %></h1>
-<%= form_with model: @new_list do |form| %>
-  <div>
-    <%= form.label :name, t(:name) %>
-    <%= form.text_field :name, class: 'shadow
-                                       appearance-none
-                                       border
-                                       rounded
-                                       w-full
-                                       py-2
-                                       px-3
-                                       leading-tight
-                                       bg-inherit
-                                       focus:outline-none
-                                       focus:border-sky-500' %>
-  </div>
-  <%= form.button t(:submit), class: 'rounded-full
-                                      border-2
-                                      border-sky-600
-                                      px-1
-                                      mt-3' %>
-<% end %>
+<div data-controller="dialog">
+  <dialog
+    data-dialog-target="dialog"
+    class="w-full
+           md:w-1/2
+           p-4
+           dark:bg-zinc-950
+           dark:text-zinc-50
+           rounded-lg
+           shadow-xl
+           border-2
+           border-sky-600">
+    <div class="flex justify-between">
+      <h1 class="mt-3 text-lg font-bold"><%= t :new_list %></h1>
+      <button
+        type="button"
+        data-action="dialog#close"
+        class="rounded-full
+              border-2
+              border-red-500
+              px-1
+              mt-3"
+        autofocus>
+        Cancel
+      </button>
+    </div>
+    <%= form_with model: @new_list do |form| %>
+      <div>
+        <%= form.label :name, t(:name) %>
+        <%= form.text_field :name, class: 'shadow
+                                           appearance-none
+                                           border
+                                           rounded
+                                           w-full
+                                           py-2
+                                           px-3
+                                           leading-tight
+                                           bg-inherit
+                                           focus:outline-none
+                                           focus:border-sky-500' %>
+      </div>
+      <%= form.button t(:submit), class: 'rounded-full
+                                          border-2
+                                          border-sky-600
+                                          px-1
+                                          mt-3' %>
+    <% end %>
+  </dialog>
+
+  <button
+    type="button"
+    data-action="dialog#open"
+    class="rounded-full
+           border-2
+           border-sky-600
+           px-1
+           mt-3">
+    New List
+  </button>
+</div>
