Add translations for list form

--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -21,7 +21,7 @@
               px-1
               mt-3"
         autofocus>
-        Cancel
+        <%= t(:cancel) %>
       </button>
     </div>
     <%= form_with model: @new_list do |form| %>
@@ -55,6 +55,6 @@
            border-sky-600
            px-1
            mt-3">
-    New List
+    <%= t(:new_list) %>
   </button>
 </div>
