--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -1,50 +1,87 @@
 <% if @list.present? %>
-  <h1 class="text-lg font-bold"><%= t :add_todo %></h1>
   <%= render 'layouts/flash' %>
-  <%= form_with model: @new_todo do |form| %>
-    <div class="mt-1 mb-1">
-      <%= form.label :description, t(:description) %>
-      <%= form.text_field :description, class: 'shadow
-                                                appearance-none
-                                                border
-                                                rounded
-                                                w-full
-                                                py-2
-                                                px-3
-                                                leading-tight
-                                                bg-inherit
-                                                focus:outline-none
-                                                focus:border-sky-500' %>
-    </div>
-    <div class="mt-1 mb-1">
-      <%= form.label :due, t(:due) %>
-      <%= form.datetime_local_field :due, class: 'shadow
-                                                  appearance-none
-                                                  border
-                                                  rounded
-                                                  w-full
-                                                  py-2
-                                                  px-3
-                                                  leading-tight
-                                                  bg-inherit
-                                                  focus:outline-none
-                                                  focus:border-sky-500' %>
-    </div>
-    <div class="mt-1 mb-1">
-      <% if Rails.configuration.home_calendar.enabled == true %>
-        <%= form.label :send_to_calendar, t(:send_to_calendar) %>
-        <%= form.checkbox :send_to_calendar %>
+  <div data-controller="dialog" class="mb-5">
+    <dialog data-dialog-target="dialog"
+            class="w-full
+                  md:w-1/2
+                  p-4
+                  dark:bg-zinc-950
+                  dark:text-zinc-50
+                  rounded-lg
+                  shadow-xl
+                  border-2
+                  border-sky-600">
+      <div class="flex justify-between">
+        <h1 class="mt-3 text-lg font-bold"><%= t(:new_list) %></h1>
+        <button
+          type="button"
+          data-action="dialog#close"
+          class="rounded-full
+                border-2
+                border-red-500
+                px-1
+                mt-3"
+          autofocus>
+          <%= t(:cancel) %>
+        </button>
+      </div>
+      <%= form_with model: @new_todo do |form| %>
+        <div class="mt-1 mb-1">
+          <%= form.label :description, t(:description) %>
+          <%= form.text_field :description, class: 'shadow
+                                                    appearance-none
+                                                    border
+                                                    rounded
+                                                    w-full
+                                                    py-2
+                                                    px-3
+                                                    leading-tight
+                                                    bg-inherit
+                                                    focus:outline-none
+                                                    focus:border-sky-500' %>
+        </div>
+        <div class="mt-1 mb-1">
+          <%= form.label :due, t(:due) %>
+          <%= form.datetime_local_field :due, class: 'shadow
+                                                      appearance-none
+                                                      border
+                                                      rounded
+                                                      w-full
+                                                      py-2
+                                                      px-3
+                                                      leading-tight
+                                                      bg-inherit
+                                                      focus:outline-none
+                                                      focus:border-sky-500' %>
+        </div>
+        <div class="mt-1 mb-1">
+          <% if Rails.configuration.home_calendar.enabled == true %>
+            <%= form.label :send_to_calendar, t(:send_to_calendar) %>
+            <%= form.checkbox :send_to_calendar %>
+          <% end %>
+        </div>
+        <%= form.hidden_field :list_id, value: @list.id %>
+        <%= form.button t(:add_todo),
+                        class: 'rounded-full
+                                border-2
+                                border-sky-600
+                                px-1
+                                mt-3
+                                mb-4' %>
       <% end %>
-    </div>
-    <%= form.hidden_field :list_id, value: @list.id %>
-    <%= form.button t(:add_todo),
-                    class: 'rounded-full
-                            border-2
-                            border-sky-600
-                            px-1
-                            mt-3
-                            mb-4' %>
-  <% end %>
+    </dialog>
+
+    <button
+      type="button"
+      data-action="dialog#open"
+      class="rounded-full
+            border-2
+            border-sky-600
+            px-1
+            mt-3">
+      <%= t(:add_todo) %>
+    </button>
+  </div>
 
   <div data-controller="dialog">
     <dialog
