--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -12,7 +12,7 @@
                   border-2
                   border-sky-600">
       <div class="flex justify-between">
-        <h1 class="mt-3 text-lg font-bold"><%= t(:new_list) %></h1>
+        <h1 class="mt-3 text-lg font-bold"><%= t(:new_todo) %></h1>
         <button
           type="button"
           data-action="dialog#close"
