--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -27,17 +27,19 @@
     <%= form_with model: @new_list do |form| %>
       <div>
         <%= form.label :name, t(:name) %>
-        <%= form.text_field :name, class: 'shadow
-                                           appearance-none
-                                           border
-                                           rounded
-                                           w-full
-                                           py-2
-                                           px-3
-                                           leading-tight
-                                           bg-inherit
-                                           focus:outline-none
-                                           focus:border-sky-500' %>
+        <%= form.text_field :name, 
+                            required: true,
+                            class: 'shadow
+                                    appearance-none
+                                    border
+                                    rounded
+                                    w-full
+                                    py-2
+                                    px-3
+                                    leading-tight
+                                    bg-inherit
+                                    focus:outline-none
+                                    focus:border-sky-500' %>
       </div>
       <%= form.button t(:submit), class: 'rounded-full
                                           border-2
