Fix dialog alignment

--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -4,6 +4,8 @@
     class="w-full
            md:w-1/2
            p-4
+           self-center
+           justify-self-center
            dark:bg-zinc-950
            dark:text-zinc-50
            rounded-lg
