--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -5,6 +5,8 @@
             class="w-full
                   md:w-1/2
                   p-4
+                  self-center
+                  justify-self-center
                   dark:bg-zinc-950
                   dark:text-zinc-50
                   rounded-lg
@@ -91,6 +93,8 @@
     <dialog
       data-dialog-target="dialog"
       class="p-4
+             self-center
+             justify-self-center
              dark:bg-zinc-950
              dark:text-zinc-50
              rounded
