--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -9,6 +9,8 @@
           <dialog
             data-dialog-target="dialog"
             class="p-4
+                   self-center
+                   justify-self-center
                    dark:bg-zinc-950
                    dark:text-zinc-50
                    rounded
