Set auto margin for dialogs

--- a/app/views/lists/_list_form.html.erb
+++ b/app/views/lists/_list_form.html.erb
@@ -4,6 +4,7 @@
     class="w-full
            md:w-1/2
            p-4
+           m-auto
            self-center
            justify-self-center
            dark:bg-zinc-950
