--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -9,6 +9,7 @@
           <dialog
             data-dialog-target="dialog"
             class="p-4
+                   m-auto
                    self-center
                    justify-self-center
                    dark:bg-zinc-950
