--- a/app/views/lists/_todo_form.html.erb
+++ b/app/views/lists/_todo_form.html.erb
@@ -5,6 +5,7 @@
             class="w-full
                   md:w-1/2
                   p-4
+                  m-auto
                   self-center
                   justify-self-center
                   dark:bg-zinc-950
@@ -93,6 +94,7 @@
     <dialog
       data-dialog-target="dialog"
       class="p-4
+             m-auto
              self-center
              justify-self-center
              dark:bg-zinc-950
